Fix carbon ads with dark mode

--- a/src/assets/styles/_carbon.sass
+++ b/src/assets/styles/_carbon.sass
@@ -6,8 +6,8 @@
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif
 	display: flex
 	max-width: 330px
-	background-color: hsl(0, 0%, 98%)
-	border: 1px solid #e0e0e0
+	background-color: $dark
+	border: 1px solid $dark-accent
 	padding: 0.5rem
 	border-radius: 3px
 	z-index: 100
@@ -44,14 +44,14 @@
 	.carbon-poweredby
 		display: block
 		padding: 6px 8px
-		background: #f1f1f2
+		background: lighten($dark, 5%)
 		text-align: center
 		text-transform: uppercase
 		letter-spacing: 0.5px
 		font-weight: 600
 		font-size: 8px
 		line-height: 1
-		border-top-left-radius: 3px
+		border-radius: 3px
 		position: absolute
 		bottom: 0
 		right: 0
